# agent-data

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  MANIFEST.in  README.md  api_design_draft.md  competitive_analysis_report.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run_demo.py  setup.py  start.sh  validation_materials.md
.github/workflows/: ci.yml  test.yml
agent_data/: __init__.py
agent_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent_data/cache/: __init__.py  base.py  memory.py
agent_data/connectors/: __init__.py  chroma.py  file.py  pinecone.py  postgresql.py  qdrant.py  rest_api.py  sql.py  vector.py
agent_data/core/: __init__.py  client.py  connector.py  errors.py  models.py  redact.py  sql_utils.py
agent_data/integrations/: __init__.py  langchain.py
agent_data/llm/: __init__.py  agnes.py  base.py  config.py
agent_data/loop/: __init__.py  agent_loop.py
agent_data/mcp/: __init__.py  server.py  tool.py
agent_data/multi_agent/: __init__.py  agent.py  orchestrator.py
agent_data/nl2sql/: __init__.py  answer.py  audit.py  cache.py  chart.py  engine.py  export.py  formatter.py  history.py  memory.py  prompt.py  schema_manager.py  semantic.py  validator.py
agent_data/nl2sql/semantic_defs/: demo.yaml
agent_data/planning/: __init__.py  executor.py  planner.py  task.py
agent_data/tracing/: __init__.py  base.py  memory.py  opentelemetry.py
agent_data/web/: __init__.py  app.py  auth.py  routes.py  schemas.py
agent_data/web/static/: app.js  index.html  style.css
agent_data/workflow/: __init__.py  engine.py  state.py  step.py
config/: nl2sql.yaml
docs/: SUPPORTED_FEATURES.md  api.md  boss_jd_analysis.md  code_quality_report.md  jd_analysis.md  jd_gap_analysis.md  job_jd_results.json  job_texts.json  requirements.md  roadmap.md
examples/: advanced_usage.py  basic_usage.py  chroma_example.py  integration_example.py  multi_source_example.py  nl2sql_example.py  postgresql_example.py  real_world_case.py  rest_api_example.py
scripts/: scrape_boss_jd.py  scrape_job_jd.py  scrape_simple.py
tests/: test_answer.py  test_audit.py  test_auth.py  test_basic.py  test_chart.py  test_edge_cases.py  test_export.py  test_followup.py  test_history.py  test_llm.py  test_loop.py  test_memory_persist.py  test_multi_agent.py  test_multiturn.py  test_nl2sql.py  test_otel_trace.py  test_performance.py  test_planning.py  test_query_cache.py  test_redact_pii.py  test_regressions.py  test_schema_manager.py  test_schema_semantic.py  test_semantic.py  test_token_tracking.py  test_validator.py  test_web.py  test_web_ui_contracts.py  test_workflow.py
tests/e2e/: conftest.py  test_empty_state.py  test_errors.py  test_smoke.py
tests/static/: parseErrorMessage.test.mjs  render.test.mjs  tokens.test.mjs
tests/static/fixtures/: turns.json
