[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-data"
version = "0.1.0"
description = "A unified data access layer for AI Agent applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agent Data Team"}
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.10.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "mypy>=0.900",
]
postgres = [
    "asyncpg>=0.27.0",
]
chroma = [
    "chromadb>=0.3.0",
]
qdrant = [
    "qdrant-client>=1.3.0",
]
api = [
    "aiohttp>=3.8.0",
]
tracing = [
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
]
langchain = [
    "langchain>=0.1.0",
]
llamaindex = [
    "llama-index>=0.10.0",
]
all = [
    "agent-data[postgres,chroma,qdrant,api,tracing]",
]

[tool.setuptools.packages.find]
include = ["agent_data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"