[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-data"
version = "0.1.0"
description = "A unified data access layer for AI Agent applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agent Data Team"}
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.10.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=4.0.0",
    "black==24.3.0",
    "flake8>=6.0.0",
    "mypy>=0.900",
    "pre-commit>=3.0.0",
    "pip-audit>=2.7.0",
]
postgres = [
    "asyncpg>=0.27.0",
]
sqlite = [
    "aiosqlite>=0.19.0",
]
chroma = [
    "chromadb>=0.4.24",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
pinecone = [
    "pinecone-client>=2.0.0",
]
api = [
    "aiohttp>=3.9.2",
]
tracing = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]
langchain = [
    "langchain>=0.3.0",
]
llamaindex = [
    "llama-index>=0.12.0",
]
all = [
    "agent-data[postgres,sqlite,chroma,qdrant,api,tracing]",
]

[tool.setuptools.packages.find]
include = ["agent_data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py39"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | \.egg-info
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 100
ignore = ["E501", "W503", "E203"]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.pyc",
]